--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -3,6 +3,11 @@
       <h2>Categorias</h2>
       <div class="categories-buttons">
         <cin-category></cin-category>
+        <cin-category></cin-category>
+        <cin-category></cin-category>
+        <cin-category></cin-category>
+        <cin-category></cin-category>
+        <cin-category></cin-category>
       </div>
     </section>
 </main>
