--- a/src/app/categories/category/category.component.html
+++ b/src/app/categories/category/category.component.html
@@ -1,4 +1,4 @@
 <figure class="category-item">
     <img src="/assets/img/action2.png" alt="Categoria">
-    <a [routerLink]="['acao']">Ação</a>
+    <a [routerLink]="['/acao']">Ação</a>
 </figure>
