--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -1,13 +1,13 @@
   main {
     padding: 20px;
+    height: 78vh;
   }
   
   section {
-    height: 100vh;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); */
   }
   
   h1 {
