--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,13 +1,6 @@
 <main>
-    <section>
-      <h2>Categorias</h2>
-      <div class="categories-buttons">
-        <cin-category></cin-category>
-        <cin-category></cin-category>
-        <cin-category></cin-category>
-        <cin-category></cin-category>
-        <cin-category></cin-category>
-        <cin-category></cin-category>
-      </div>
-    </section>
+  <section>
+    <h2>Categorias</h2>
+      <cin-category *ngFor="let category of categories" [category]="category"></cin-category>
+  </section>
 </main>
