--- a/src/app/page-action/page-action.component.html
+++ b/src/app/page-action/page-action.component.html
@@ -3,15 +3,15 @@
       <h2>Filmes de Ação</h2>
       <div class="movies-grid">
         <div class="movie">
-          <img src="../../assets/img/flash2023.jpg" alt="The Flash - 2023">
+          <img src="/assets/img/flash2023.jpg" alt="The Flash - 2023">
           <h3>The Flash - 2023 [1080p] [Dublado]</h3>
         </div>
         <div class="movie">
-          <img src="../../assets/img/esquemaderiscooperacaofortune.jpg" alt="Esquema de Risco: Operação Fortune">
+          <img src="/assets/img/esquemaderiscooperacaofortune.jpg" alt="Esquema de Risco: Operação Fortune">
           <h3>Esquema de Risco: Operação Fortune [1080p] [Dublado]</h3>
         </div>
         <div class="movie">
-            <img src="../../assets/img/sisu2023.jpg" alt="Sisu - 2022">
+            <img src="/assets/img/sisu2023.jpg" alt="Sisu - 2022">
             <h3>Sisu - 2022 [1080p] [Dublado]</h3>
           </div>
       </div>
