--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -1,11 +1,22 @@
 footer {
     background-color: hsl(0, 74%, 43%);
     color: #fff;
-    padding: 10px;
+    padding: 12.5px;
     text-align: center;
     font-size: 14px;
 }
 
 footer p {
     margin: 0;
+}
+
+a {
+    font-weight: bold;
+    color: #fff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+a:hover {
+    color: black;
 }
