--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -2,6 +2,14 @@ header {
     background-color: hsl(0, 74%, 43%);
     color: #fff;
     padding: 20px;
+    display: flex;
+    align-items: center;
+}
+
+.item-container {
+    display: flex;
+    justify-content: right;
+    width: 3000px;
 }
 
 nav ul {
@@ -27,5 +35,23 @@ nav ul li a:hover {
 
 h1 {
     font-size: 36px;
-    margin-bottom: 10px;
+}
+
+i {
+    display: none;
+    
+}
+
+@media (max-width: 768px) {
+    i {
+        display: block;
+        text-align: right;
+        font-size: xx-large;
+    }
+
+    a {
+        display: none;
+    }
+
+
 }
