Update Update Ultimo

--- a/src/app/categories/categories.component.html
+++ b/src/app/categories/categories.component.html
@@ -1,6 +1,6 @@
 <main>
   <section>
     <h2>Categorias</h2>
-      <cin-category *ngFor="let category of categories" [category]="category"></cin-category>
+      <cin-category *ngFor="let category of categorias" [category]="category"></cin-category>
   </section>
 </main>
