--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
 
   <div class="logo-container">
-    <h1>JulioFlix</h1>
+    <h1><a [routerLink]="['']" class="logo">JulioFlix</a></h1>
   </div>
     
     <div class="item-container">
