--- a/src/app/categories/categories.component.css
+++ b/src/app/categories/categories.component.css
@@ -1,26 +1,24 @@
 main {
   padding: 20px;
   min-height: 81vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 section {
   background-color: #fff;
   padding: 20px;
   border-radius: 5px;
-}
-
-h1 {
-  font-size: 36px;
-  margin-bottom: 10px;
+  width: 100%; 
+  max-width: 800px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
   font-size: 24px;
   margin-bottom: 10px;
-}
-
-p {
-  margin-bottom: 15px;
+  text-align: center;
 }
 
 .categories-buttons {
@@ -28,4 +26,5 @@ p {
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
+  margin-top: 20px;
 }
