--- a/src/app/movie/movie.component.html
+++ b/src/app/movie/movie.component.html
@@ -1,10 +1,10 @@
 <main>
     <section>
         <h2>Categoria</h2>
-        <div class="movies-grid" *ngFor="let movie of selectedCategoryMovies">
-            <div class="movie">
-                <img [src]="movie.img" alt="movie.name">
-                <h3>{{movie.name}}</h3>
+        <div class="movies-grid">
+            <div class="">
+                <img [src]="" alt="">
+                <h3></h3>
             </div>
         </div>
     </section>
